# time-series-analysis

./: .cursorignore  .gitignore  .pre-commit-config.yaml  .pyrefly.toml  AGENTS.md  CLAUDE.md  README.md  SBIN.csv  SmaCross.html  download_data_yf.py  get_data.py  get_index_data.py  kpcaData.npy  main.py  new_nb.ipynb  nifty50.csv  nseData.ipynb  pyproject.toml  pyrightconfig.json  quickstart.ipynb  technicalIndicators.py  test.py  tsneData.npy
.claude/: launch.json
.cursor/rules/: data-repositories.mdc  streamlit-ui.mdc  trading-platform-core.mdc
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 20260613_0001_add_amfi_db_added_at.py  20260622_0002_port_handwritten_migrations.py  366acc72ee77_stock_fundamentals_quarterly_metrics_.py  47b1f0a9c3d2_stock_metrics_price_columns.py  5a2c9d4e1b3f_amfi_sub_category.py
bot/: bot.py  data_provider.py  worker.py
core/: config.py  constants.py  database.py  enums.py  exceptions.py  indicators.py  logging_config.py  models.py  timing.py
core/models/: __init__.py  mutual_fund.py  stock.py  trading.py
data/: constants.py
data/fetchers/: index.py  mutual_fund.py  screener_in.py  stock.py  temp.py
data/repositories/: amfi.py  fund_mapping.py  holdings.py  metadata.py  nav.py  registry.py  scheme_codes.py  scheme_metrics.py  screener.py  stock.py  stock_fundamentals.py  tradebook.py
data/store/: amfi.py  mutual_fund.py  mutualfund.py  stock.py  tradebook.py
docs/: decisions.md  refactor-followups.md
exchange/: base.py  paper.py
indicators/: __init__.py  overlays.py  panels.py  registry.py
migrations/: __init__.py  runner.py
mutual_funds/: analytics.py  constants.py  correlation_analytics.py  data_store.py  display.py  holdings.py  holdings_stats.py  metric_catalog.py  models.py  registry.py  tableSchema.py  tradebook.py
notebooks/: LSTM_Volatality_GARCH.ipynb  LSTM_Volatality_GARCH2.ipynb  new_nb.ipynb  nseData.ipynb  test.ipynb
scripts/: compute_metrics.py  dedupe_synthetic_codes.py  download_data.py  fetch_nse_index.py  migrate.py  migrate_parquet_to_db.py  profile.sh
services/: backtest_service.py  benchmarks.py  constants.py  data_freshness.py  db_stats.py  mf_metrics.py  portfolio_holdings.py  portfolio_service.py  registry_service.py  scheme_lookup.py  screener_service.py  stock_metrics.py  stock_screener_service.py  stock_sync_service.py  sync_service.py
src/data/fetchers/: mutual_fund.py  stock.py
src/mf/: nav.py  nav_store.py  registry.py
src/mutualFunds/: analytics.py  constants.py  data_store.py  fetch_data.py  holdings.py  registry.py  tradebook.py
src/strategies/: base.py  rsi.py
src/ui/: app.py
src/ui/charts/: correlation_heatmap.py  indicator_chart.py  plotters.py
src/ui/components/: fund_matcher.py  mutual_funds_rolling_returns.py
src/ui/data/: loaders.py
src/ui/persistence/: cookies.py
src/ui/views/: backtest.py  mutualFund.py
stocks/: constants.py  metric_catalog.py
strategies/: __init__.py  base.py  bollinger.py  macd.py  rsi.py  sma_crossover.py
tests/: test_amfi_added_at.py  test_backtest_metrics.py  test_portfolio_service.py  test_refresh_safety.py  test_scheme_codes.py  test_screener_filters.py  test_tradebook.py
ui/: app.py  constants.py  sidebar.py  utils.py
ui/callbacks/: mutual_fund.py
ui/charts/: correlation_heatmap.py  correlation_views.py  fund_trade_comp.py  indicator_chart.py  plotters.py  price_chart.py  theme.py
ui/components/: advisor_khoj_fund_adder.py  aggrid_theme.py  cookies.py  freshness_banner.py  fund_matcher.py  fund_picker.py  funds_library.py  mutual_fund_holdings.py  mutual_funds_rolling_returns.py  sidebar.py  stock_picker.py
ui/data/: loaders.py
ui/layout/: main.py  sidebar.py
ui/persistence/: cookies.py  localstorage.py  selections.py
ui/state/: loaders.py
ui/tables/: stats_table.py
ui/views/: backtest.py  data_manager.py  mf_screener.py  mutualFund.py  mutual_fund.py  mutual_funds.py  portfolio.py  settings.py  stock_analysis.py
ui/views/mf_screener/: __init__.py  backfill.py  chart.py  filters.py  page.py  table.py
ui/views/mf_tabs/: correlation.py  holdings.py  overlap.py  portfolio.py  returns.py
ui/views/mutualFund/: fund_picker.py  main.py  page.py  plotters.py  showHoldingsTable.py  showRollingReturns.py  tradebook.py  utils.py
ui/views/mutual_fund/: holdings.py  overlap.py  page.py  returns.py
ui/views/portfolio/: allocation.py  growth.py  helpers.py  page.py  risk_metrics.py  risk_vs_return.py
ui/views/portfolio_tabs/: allocation.py  drawdown.py  fund_returns.py  growth.py  helpers.py  risk_metrics.py  risk_vs_return.py
ui/views/settings/: amfi.py  data_sources.py  db_stats.py  metrics_cache.py  page.py  refresh.py  tradebook.py
ui/views/stock_analysis/: chart.py  page.py  strategy_backtest.py
ui/views/stock_screener/: chart.py  page.py
ui/views/stock_tabs/: chart.py  strategy_backtest.py
