[project]
name = "time-series-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python=">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "streamlit>=1.52.2",
    "vectorbt>=0.28.2",
    "yfinance>=0.2.66",
    "psycopg2-binary>=2.9",
    "sqlmodel>=0.0.22",
    "ta-lib>=0.6",
    "quantstats>=0.0.77",
    "jugaad-data>=0.30",
    "streamlit-lightweight-charts>=0.7",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ipykernel>=7.1.0",
    "pip-check-reqs>=2.5.5",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.setuptools.packages.find]
include = ["core*", "data*", "mutual_funds*", "strategies*", "ui*", "scripts*"]

[tool.pyrefly]
project_root = "."
search_path = ["."]

[tool.uv]


[tool.streamlit]
asset_dir = "..."
