[project]
name = "time-series-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python=">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "streamlit>=1.52.2",
    "vectorbt>=0.28.2",
    "yfinance>=0.2.66",
    "psycopg2-binary>=2.9",
    "sqlmodel>=0.0.22",
    "ta-lib>=0.6",
    "quantstats>=0.0.77",
    "jugaad-data>=0.30",
    "streamlit-lightweight-charts>=0.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pip-check-reqs>=2.5.5",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "pydantic-settings>=2.0",
]

[tool.setuptools.packages.find]
include = [
    "core*", "data*", "mutual_funds*", "strategies*", "ui*", "scripts*",
    "indicators*", "services*", "exchange*", "bot*",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["notebooks/", ".venv/", "*.egg-info/"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg (common in Streamlit/FastAPI)
    "SIM108",# ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = [
    "core", "data", "mutual_funds", "strategies", "ui",
    "indicators", "services", "exchange", "bot",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyrefly]
project_root = "."
search_path = ["."]

[tool.uv]


[tool.streamlit]
asset_dir = "..."
