[project]
name = "time-series-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python=">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "streamlit>=1.52.2",
    "vectorbt>=0.28.2",
    "yfinance>=0.2.66",
    "psycopg2-binary>=2.9",
    "sqlmodel>=0.0.22",
    "ta-lib>=0.6",
    "quantstats>=0.0.77",
    "scipy>=1.13",
    "jugaad-data>=0.30",
    "streamlit-lightweight-charts>=0.7",
    "watchdog>=6.0.0",
    "streamlit-aggrid>=1.2.1.post2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pip-check-reqs>=2.5.5",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "pre-commit>=4.0",   # runs ruff + hygiene hooks on every commit
    "vulture>=2.14",     # finds dead code (unused funcs/classes/vars)
    "basedpyright>=1.31", # type checker (config in [tool.basedpyright])
]

[tool.setuptools.packages.find]
include = [
    "core*", "data*", "mutual_funds*", "strategies*", "ui*", "scripts*",
    "indicators*", "services*",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["notebooks/", ".venv/", "*.egg-info/"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
    "SIM",     # flake8-simplify
    "RUF",     # ruff-specific rules
    "C4",      # flake8-comprehensions (collapse loops → comprehensions)
    "PIE",     # flake8-pie (unnecessary code)
    "RET",     # flake8-return (simplify return flows)
    "PERF",    # perflint (avoidable overhead in loops)
    "PTH",     # flake8-use-pathlib (os.path → pathlib)
    "LOG",     # flake8-logging (correct logger usage)
    "TID",     # flake8-tidy-imports (ban relative imports)
    "TC",      # flake8-type-checking (move type-only imports into TYPE_CHECKING)
    "PLC0415", # import-outside-top-level (flags the function-local imports)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg (common in Streamlit/FastAPI)
    "SIM108",# ternary operator (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]      # re-export modules without noqa noise
"tests/*" = ["PLC0415"]       # local imports in tests are fine
"ui/views/**" = ["E402"]      # Streamlit pages run module-level code after st.* setup

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"  # always use absolute imports (core.x, services.y)

[tool.ruff.lint.isort]
known-first-party = [
    "core", "data", "mutual_funds", "strategies", "ui",
    "indicators", "services",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.vulture]
min_confidence = 80
paths = ["core", "data", "services", "ui", "mutual_funds", "indicators"]
exclude = ["notebooks/", "*/__pycache__/"]
# Run: uv run vulture  (reports unused functions/classes/vars at >=80% confidence)

[tool.basedpyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
include = ["core", "services", "data", "ui", "indicators", "strategies", "mutual_funds", "main.py"]
exclude = ["notebooks", ".venv", "**/__pycache__", "scripts", "tests", "alembic"]
reportMissingTypeStubs = false
# The scientific stack (pandas/polars/numpy/TA-Lib/vectorbt/st_aggrid) and SQLModel/SQLAlchemy
# type their returns as broad unions / ship over-broad stubs, so these rules fire almost
# entirely on library-boundary friction (Series↔ndarray args, union returns, ORM overload
# mismatches) rather than real bugs — and that's true in both basic and standard mode.
# Silenced to keep the high-signal rules loud: None access (reportOptional*), undefined
# names, missing imports, redeclarations, index issues, etc. all stay errors.
reportAssignmentType = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
reportReturnType = "none"

[tool.uv]


[tool.streamlit]
asset_dir = "..."
